fixing the app logo and flexbox align

--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,11 @@ body {
 }
 
 #header-container{
-  margin: 20px 10px 20px 10px;
   position: relative;
   display: flex;
   justify-content: space-between;
   flex-wrap: nowrap;
+  align-items: center;
 }
 
 #left{
@@ -17,6 +17,8 @@ body {
 #right{
   margin-left: auto;
   display: flex;
+  align-items: center;
+  margin-right: 10px;
 }
 
 a {
@@ -25,27 +27,45 @@ a {
   text-decoration: none;
   margin-left: 10px;
   margin-right: 10px;
-  align-self: center;
 }
 
 a:hover {
   text-decoration: underline;
 }
 
+#applications {
+  border-radius: 100%;
+  height: 40px;
+  width: 40px;
+  margin-left: 15px;
+  margin-right: 15px;
+  display: inline-block;
+}
+
+#applications:hover {
+  background-color: rgb(238, 238, 238);
+}
+
 #app-logo {
   height: 24px;
   width: 24px;
   opacity: 50%;
-  margin-left: 5px;
-  margin-right: 10px;
+  margin-top: 8px;
+  margin-left: 8px;
 }
 
 #sign-in-button {
+  height: 35px;
   background-color: rgb(34, 124, 226);
   color: white;
   width: 90px;
   border-radius: 3px;
 }
+
+#sign-in-button:hover {
+  opacity: 95%;
+}
+
 #body-container {
   display: flex;
   flex-direction: column;
